# thuai-2022-backend

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build.ps1  build.sh  cmake_install.cmake  compile_commands.json  entities_json.cpp  entities_json.h  main.cpp  out2.txt  stream_helper.cpp  stream_helper.h  test.txt  test2.txt  vcpkg.json  world.cpp  world.h  题面.md
.github/workflows/: main.yml  saiblo.yml
statements/: gitHeadLocal.gin  statements.fdb_latexmk  statements.fls  statements.md  statements.tex  statements.xdv
tools/: b2_math.patch
